# findgram

./: .gitignore  CLAUDE.md  LICENSE  README.md  format.py  main.py  pyproject.toml
src/findgram/: __init__.py  bot.py  config.py  indexer.py  main.py  search.py  telegram_client.py
tests/: test_indexer.py  test_search.py
