[project]
name = "findgram"
version = "0.1.0"
description = "A telegram bot to search your messages with good Chinese and multi-account support."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "meilisearch>=0.40.0",
    "phdkit>=0.1.3",
    "rich>=14.3.3",
    "telethon>=1.42.0",
]
[[project.authors]]
name = "Chuyang Chen"
email = "chuyangchen2018@outlook.com"

